# mailora-hub-imap

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  db.sqlite  docker-compose.yml  test_accounts_api.sh  test_sqlx.patch
.sqlx/: query-6f9ac25eae6b8724913a9ccf038c0b838a2d59198cf77dcc3e61b02bd2afacf0.json  query-76d085ac2d1931455ac7b04aa0835c0c16d47facb9ed6f76e2d513add76d9b59.json  query-ce2f0f98b5c5d20988ec9713d1d262e5e9ae3e397b75d3c3bfd10f082c3f671e.json
MailoraPro/: api_server.py  egitim_duygu.py  egitim_kokteyl_gpu.py  egitim_konu.py  egitim_konu_v2.py  egitim_konu_v3.py  egitim_spam.py  egitim_yanit.py  test_duygu_siniflandirma.py  test_konu_siniflandirma.py  veri_olustur_v2.py  veri_yanit.py  veri_zenginlestir.py
examples/: jmap_test.rs
mailora-hub-imap-1.1.0/: .env.example  .gitignore  FEATURES.md  README.md  quick_test.sh  test_gmail_imap.sh
mailora-hub-imap-1.1.0/.sqlx/: query-679370fb9ef0a273d0db6863b8e1daef4b0af9c41dc8edf3c56460cdb8881d7f.json  query-783d256363a9300b2627f4a73c1c45f8aac8a98c934ba1d5bd184dda00977dfe.json  query-c6f7eaabacb9371336ce4f76a7841795bade082f555a8572fab3b3e64c8d78e1.json  (+1 more)
mailora-hub-imap-1.1.0/src/: config.rs  (+6 more)
memory_bank/: ARCHITECTURE.md  FEATURES_COMPLETED.md  IMAP_SMTP_ONLY.md  MILESTONE_1_STATUS.md  MILESTONE_2_STATUS.md  NEXT_STEPS.md  OAUTH_SETUP.md  TEST_RESULTS.md  activeContext.md  dev_report.md  pim_scope.md  productContext.md  progress.md  projectbrief.md  roadmap.md  rules.md  stalwart_backend_plan.md  systemPatterns.md  techContext.md  test_manual.md
migrations/: 00000000000000_create_accounts.sql  20241002120000_create_users.sql  20241002120030_create_messages.sql  20241002120030_create_messages.sql.bak  20241002120050_add_indexes.sql  20241012000000_create_accounts.sql  20241019000000_add_oauth_fields.sql  20251110121000_add_message_bodies_meta.sql  20251112090000_alter_messages.sql  20251225000000_create_rbac_tables.sql  20251230000000_create_outbox.sql  20251231000000_add_snooze.sql  20260309000000_create_contacts.sql  20260309000001_add_pim_urls.sql  20260309100000_create_calendars.sql
src/: config.rs  lib.rs  main.rs  management_api.rs  oauth_client.rs  persist.rs  rbac.rs  telemetry.rs
static/: admin.html  admin_demo.html  app.html  calendar.html  calendar_demo.html  index.html  login.html  register.html  settings.html  sheets.html
tests/: integration_action.rs  integration_attachments.rs  integration_body.rs  integration_diff.rs  integration_events.rs
(+154 files in other folders)
