[package]
name = "mailora-hub-imap"
version = "0.1.0"
edition = "2021"

[workspace]

# Dependencies
[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","signal"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
anyhow = "1"
async-imap = "0.9"
native-tls = "0.2"
tokio-native-tls = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "tokio1", "tokio1-rustls-tls"] }
# Database
sqlx = { version = "0.8", features=["sqlite","runtime-tokio","macros","chrono"] }
# Misc utilities
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
dotenvy = "0.15"
tokio-util = { version = "0.7", features=["compat"] }
futures-util = "0.3"
once_cell = "1"
futures = "0.3"
chrono = "0.4"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1.6", features = ["v4"] }
# OAuth2 dependencies
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
mail-parser = "0.8"
# New: sanitize & crypto
ammonia = "4"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
trust-dns-resolver = { version = "0.23.2", features = ["tokio"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
bcrypt = "0.17.1"
